Feeding data to CustomCells for ViewController 3

--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -736,7 +736,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="dla-1J-ZEe"/>
+        <segue reference="A6w-He-0OV"/>
         <segue reference="NcS-rt-K5w"/>
     </inferredMetricsTieBreakers>
     <resources>
