--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -204,28 +204,36 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="sectionIndexBackgroundColor" red="0.1983621716" green="0.24874830249999999" blue="0.34903240200000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="126" id="fv5-fb-WaN" customClass="CustomCell2" customModule="IncidentTableView" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="126"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="125" id="fv5-fb-WaN" customClass="CustomCell2" customModule="IncidentTableView" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fv5-fb-WaN" id="o61-pe-BHA">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="126"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="125"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOm-en-wj0">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="58"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Additional Information:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKv-ZF-VW9">
+                                                    <rect key="frame" x="20" y="53" width="394" height="62"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Additional Information:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKv-ZF-VW9">
-                                                    <rect key="frame" x="20" y="53" width="374" height="62"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOm-en-wj0">
+                                                    <rect key="frame" x="20" y="11" width="394" height="55"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dKv-ZF-VW9" firstAttribute="leading" secondItem="o61-pe-BHA" secondAttribute="leading" constant="20" symbolic="YES" id="1yK-Wt-Cdp"/>
+                                                <constraint firstAttribute="trailing" secondItem="dKv-ZF-VW9" secondAttribute="trailing" id="4EX-bn-daI"/>
+                                                <constraint firstItem="dKv-ZF-VW9" firstAttribute="top" secondItem="o61-pe-BHA" secondAttribute="top" constant="53" id="6pT-Yo-ypk"/>
+                                                <constraint firstItem="bOm-en-wj0" firstAttribute="top" secondItem="o61-pe-BHA" secondAttribute="top" constant="11" id="Dom-Um-e1a"/>
+                                                <constraint firstAttribute="bottom" secondItem="bOm-en-wj0" secondAttribute="bottom" constant="59" id="Kku-dq-ANk"/>
+                                                <constraint firstAttribute="trailing" secondItem="bOm-en-wj0" secondAttribute="trailing" id="SLZ-t4-VYK"/>
+                                                <constraint firstItem="bOm-en-wj0" firstAttribute="leading" secondItem="o61-pe-BHA" secondAttribute="leading" constant="20" symbolic="YES" id="SrU-SK-YGo"/>
+                                                <constraint firstAttribute="bottom" secondItem="dKv-ZF-VW9" secondAttribute="bottom" constant="10" id="uOA-97-CUS"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.19649976490000001" green="0.21135562660000001" blue="0.23529773949999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <connections>
@@ -736,7 +744,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="dla-1J-ZEe"/>
+        <segue reference="A6w-He-0OV"/>
         <segue reference="NcS-rt-K5w"/>
     </inferredMetricsTieBreakers>
     <resources>
